K8S/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: monitoring
  labels:
    app: kibana
spec:
  ports:
    - port: 5601
      targetPort: 5601
      name: http
  selector:
    app: kibana
