K8S/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
        more_clear_headers Content-Security-Policy;
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.arcaptcha.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
